refactor : separate note and user routes and add resetPassword.ejs file
