# app/routes/userRoute.js
@@ -1,0 +1,25 @@
+/**
+ * @module      routes
+ * @file         route.js
+ * @description  provide the routes for user as well note operations
+ * @author       Payal Ghusalikar <payal.ghusalikar9@gmail.com>
+ * @since        27/01/2021  
+-----------------------------------------------------------------------------------------------*/
+
+var helper = require("../../middleware/helper.js");
+
+module.exports = (app) => {
+    const user = require("../controllers/user.js");
+
+    // register a new user
+    app.post("/register", user.register);
+
+    // Login existing user
+    app.post("/login", user.login);
+
+    //forget password
+    app.post("/forgotpassword", user.forgotPassword);
+
+    // Reset password
+    app.put("/resetpassword", helper.verifyToken, user.resetPassword);
+};
