# lib/swagger.json
@@ -134,7 +134,6 @@
                 }
             }
         },
-
         "/register/": {
             "post": {
                 "tags": [
@@ -157,7 +156,6 @@
                 "responses": {
                     "200": {
                         "description": "user created successfully"
-
                     },
                     "400": {
                         "description": "user information cannot be empty"
@@ -165,7 +163,6 @@
                 }
             }
         },
-
         "/login/": {
             "parameters": [{
                 "name": " User",
@@ -204,42 +201,37 @@
                 }
             }
         },
-        "/resetpassword/{id}": {
+        "/resetpassword": {
             "parameters": [{
-                "name": "id",
-                "in": "path",
-                "required": true,
-                "description": "find Note by ID",
-                "type": "string"
+                "name": "token",
+                "in": "header",
+                "description": "reset password"
             }],
             "put": {
                 "tags": [
                     "FundooNotes"
                 ],
-                "summary": "Update an existing Note",
-                "description": "find by ID and update",
-                "operationId": "updateNote",
+                "summary": "reset password",
+                "description": "set new password",
+                "operationId": "updatePassword",
                 "parameters": [{
-                    "name": " Note ",
+                    "name": " new password ",
                     "in": "body",
                     "type": "string",
                     "required": true
                 }],
                 "responses": {
                     "200": {
-                        "description": "Note updated successfully"
+                        "description": "Password updated successfully"
                     },
                     "404": {
-                        "description": "Note not found "
+                        "description": "Password not found "
                     },
                     "500": {
-                        "description": "could not find Notes"
+                        "description": "could not find user"
                     }
                 }
             }
-
         }
     }
-
-
 }
